<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pierwszaCyfra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/cyfra1" />

            <EditText
                android:id="@+id/drugaCyfra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cyfra2"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dodawanie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dodawanie"
                android:text="+" />

            <Button
                android:id="@+id/odejmowanie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/odejmowanie"
                android:text="-" />

            <Button
                android:id="@+id/mnozenie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mnozenie"
                android:text="*" />

            <Button
                android:id="@+id/dzielenie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dzielenie"
                android:text="/" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wynik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wynik"
                android:text="wynik działania" />
        </LinearLayout>

        <Button
            android:id="@+id/rozszerzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:hint="@string/rozszerzone"
            android:onClick="rozszerzone"
            android:text="Pokaż rozszerzone funkcje" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>